--- a/WolvenKit/Views/Editor/Basic/ImportView.xaml
+++ b/WolvenKit/Views/Editor/Basic/ImportView.xaml
@@ -2,7 +2,6 @@
  x:Class="WolvenKit.Views.Editor.ImportView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters;assembly=WolvenKit.App"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,6 +13,7 @@
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:model="clr-namespace:WolvenKit.Models;assembly=WolvenKit.App"
  xmlns:viewModels="clr-namespace:WolvenKit"
+ xmlns:basic1="clr-namespace:WolvenKit.ViewModels.Editor.Basic;assembly=WolvenKit.App"
  d:DesignHeight="450"
  d:DesignWidth="800"
  IsVisibleChanged="UserControl_IsVisibleChanged"
@@ -35,9 +35,7 @@
          Name="TreeView"
          ItemsSource="{Binding Poperties}"
          Style="{DynamicResource TreeView}">
-            <i1:Interaction.Behaviors>
-                <behavior:TreeViewBehavior />
-            </i1:Interaction.Behaviors>
+            
 
             <TreeView.ContextMenu>
                 <ContextMenu>
@@ -82,7 +80,7 @@
             </TreeView.ItemContainerStyle>
 
             <TreeView.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type model:FileSystemInfoModel}" ItemsSource="{Binding Children}">
+                <HierarchicalDataTemplate DataType="{x:Type basic1:FileViewModel}" ItemsSource="{Binding Children}">
                     <StackPanel Orientation="Horizontal">
                         <StackPanel.InputBindings>
                             <MouseBinding
