--- a/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
@@ -2,7 +2,6 @@
  x:Class="WolvenKit.Views.Editor.ProjectExplorerView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior"
  xmlns:c="clr-namespace:WolvenKit.Functionality.WKitGlobal.Helpers"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters;assembly=WolvenKit.App"
@@ -11,11 +10,17 @@
  xmlns:i1="http://schemas.microsoft.com/xaml/behaviors"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:model="clr-namespace:WolvenKit.Models;assembly=WolvenKit.App"
- xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
+ xmlns:svgc="http://sharpvectors.codeplex.com/svgc/" 
+ xmlns:syncfusion="http://schemas.syncfusion.com/wpf" 
+ xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+ xmlns:editor="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
+ xmlns:basic="clr-namespace:WolvenKit.ViewModels.Editor.Basic;assembly=WolvenKit.App"
  d:DesignHeight="450"
- d:DesignWidth="800"
+ d:DesignWidth="400"
  IsVisibleChanged="UserControl_IsVisibleChanged"
  mc:Ignorable="d"
+ d:DataContext="{d:DesignInstance Type=editor:ProjectExplorerViewModel}"
+
  >
 
     <catel:UserControl.Resources>
@@ -36,20 +41,18 @@
             <hc:SearchBar Margin="3" />
         </Grid>
 
-        <TreeView
-         Name="TreeView"
-         Margin="0,0,0,0"
-         BorderBrush="Transparent"
-         FontSize="11"
-         ItemsSource="{Binding Treenodes}"
-         SelectedItemChanged="TreeView_SelectedItemChanged"
-         Style="{DynamicResource TreeView}"
-         >
-            <i1:Interaction.Behaviors>
-                <behavior:TreeViewBehavior />
-            </i1:Interaction.Behaviors>
+        <syncfusion:SfTreeView x:Name="TreeView"
+                               AllowDragging="True"
+                               AllowDrop="True"
+                               AutoExpandMode="AllNodes"
+                               ChildPropertyName="Children"
+                               ShowLines="True"
+                               ItemsSource="{Binding ModelTree}"
+                               >
 
-            <TreeView.ContextMenu>
+            
+
+            <syncfusion:SfTreeView.ContextMenu>
                 <ContextMenu FontSize="11" Style="{DynamicResource ContextMenuBaseStyle}">
                     <MenuItem
                      Margin="0"
@@ -88,46 +91,38 @@
                     <MenuItem Command="{Binding CollapseCommand}" Header="Collapse children" />
                     <Separator Margin="-15" />
                 </ContextMenu>
-            </TreeView.ContextMenu>
+            </syncfusion:SfTreeView.ContextMenu>
 
-            <TreeView.ItemContainerStyle>
-                <Style BasedOn="{StaticResource MahApps.Styles.TreeViewItem}" TargetType="{x:Type TreeViewItem}">
-                    <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
-                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
-                    <Setter Property="KeyboardNavigation.AcceptsReturn" Value="True" />
-                </Style>
-            </TreeView.ItemContainerStyle>
-
-            <TreeView.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type model:FileSystemInfoModel}" ItemsSource="{Binding Children}">
-                    <StackPanel Orientation="Horizontal">
-                        <StackPanel.InputBindings>
-                            <MouseBinding
-                             Command="{catel:CommandManagerBinding Application.OpenFile}"
-                             CommandParameter="{Binding}"
-                             MouseAction="LeftDoubleClick"
-                             />
-                        </StackPanel.InputBindings>
-                        <svgc:SvgViewbox
-                         Width="22"
-                         Height="15"
-                         Margin="0"
-                         Source="{Binding Extension, Converter={StaticResource ExtensionToImageConverter}}"
-                         Stretch="Uniform"
-                         />
-                        <TextBlock Text="{Binding Path=Name}" />
-                        <i1:Interaction.Triggers>
-                            <i1:EventTrigger EventName="PreviewMouseRightButtonDown">
-                                <i1:ChangePropertyAction
-                                 PropertyName="IsSelected"
-                                 TargetObject="{Binding}"
-                                 Value="true"
-                                 />
-                            </i1:EventTrigger>
-                        </i1:Interaction.Triggers>
-                    </StackPanel>
-                </HierarchicalDataTemplate>
-            </TreeView.Resources>
-        </TreeView>
+            <syncfusion:SfTreeView.ItemTemplate>
+                <DataTemplate>
+                    <Grid x:Name="grid">
+                        <Grid Grid.Row="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="20" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="20" />
+                            </Grid.ColumnDefinitions>
+                            <Grid>
+                                <iconPacks:PackIconCodicons Kind="{Binding IconPath, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                                            Width="16"
+                                                            Height="16"
+                                                            />
+                            </Grid>
+                            <Grid Grid.Column="1"
+                                  Margin="1,0,0,0"
+                                  VerticalAlignment="Center">
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="{Binding Name}"
+                                               FontSize="14"
+                                               VerticalAlignment="Center" 
+                                               Padding="0,0,10,0"
+                                    />
+                                </StackPanel>
+                            </Grid>
+                        </Grid>
+                    </Grid>
+                </DataTemplate>
+            </syncfusion:SfTreeView.ItemTemplate>
+        </syncfusion:SfTreeView>
     </Grid>
 </catel:UserControl>
