--- a/WolvenKit/Views/Editor/Basic/ImportView.xaml
+++ b/WolvenKit/Views/Editor/Basic/ImportView.xaml
@@ -13,7 +13,7 @@
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:model="clr-namespace:WolvenKit.Models;assembly=WolvenKit.App"
  xmlns:viewModels="clr-namespace:WolvenKit"
- xmlns:basic1="clr-namespace:WolvenKit.ViewModels.Editor.Basic;assembly=WolvenKit.App"
+ xmlns:converters1="clr-namespace:WolvenKit.Functionality.Converters"
  d:DesignHeight="450"
  d:DesignWidth="800"
  IsVisibleChanged="UserControl_IsVisibleChanged"
@@ -28,7 +28,7 @@
     </catel:UserControl.Resources>
     <Grid>
         <Grid.Resources>
-            <converters:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
+            <converters1:ExtensionToImageConverter x:Key="ExtensionToImageConverter" />
         </Grid.Resources>
 
         <TreeView
@@ -80,7 +80,7 @@
             </TreeView.ItemContainerStyle>
 
             <TreeView.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type basic1:FileViewModel}" ItemsSource="{Binding Children}">
+                <HierarchicalDataTemplate DataType="{x:Type model:FileModel}" ItemsSource="{Binding Children}">
                     <StackPanel Orientation="Horizontal">
                         <StackPanel.InputBindings>
                             <MouseBinding
